@@ -23,6 +23,7 @@ Changes in 1.1:
 - Make sure connection setup slots are distributed fairly to avoid starvation
 - Use weak pointers in PeerConnector and Authenticate (257126)
 - When a webseed has 3 connection failures, wait 30 seconds and try again instead of not using it anymore (258210)
+- Fix crash in PeerConnector cleanup (258878)
 
 Changes in 1.0.5:
 - Update PeerID client identifications
